--- a/styles.css
+++ b/styles.css
@@ -3,13 +3,16 @@
 } */
 
 body {
-    align-items: center;
-    text-align: center;
+    
     margin: 0px;
+    padding: 0px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: #d6d6d2;
     
 }
+
+
+
 .header-container {
     display: flex;
     background-color: #FFDE00;
@@ -77,20 +80,19 @@ body {
     height: 30px;
     width: 30px;
 }
-#cpu-choice-img {
-    height: 50px;
-    width: 50px;
-}
 
 .cpu-container {
     display: flex;
+    flex: 1;
     justify-content: space-around;
     height: 200px;
 }
 .player-container {
     display: flex;
+    flex: 1;
     justify-content: space-around;
     height: 250px;
+    flex-grow: 1;
 }
 
 .cpu-choice {
@@ -113,6 +115,11 @@ body {
     align-items: flex-end;
     padding: 3px;
     gap: 5px;
+    transition: transform .2s;
+}
+
+.player-health:hover {
+    transform: scale(1.02);
 }
 
 .cpu-health {
@@ -121,7 +128,11 @@ body {
     justify-content: flex-end;
     padding: 3px;
     gap: 5px;
+    transition: transform .2s;
+}
 
+.cpu-health:hover {
+    transform: scale(1.02);
 }
 
 #playerlife1, #playerlife2, #playerlife3, #playerlife4, #playerlife5 {
@@ -142,8 +153,10 @@ body {
 .dialog-box {
     width: 600px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 30px;
 }
 
 .player-choices {
@@ -153,16 +166,17 @@ body {
     
 }
 
-#btn {
+#firebtn, #waterbtn, #grassbtn {
     height: 100px;
     width: 100px;
     transition: transform .2s;
     border:4px solid black;
     border-radius:80px;
+    background-color: black;
     
 }
 
-#btn:hover {
+#firebtn:hover, #waterbtn:hover, #grassbtn:hover {
     transform: scale(1.08);
 }
 
@@ -171,4 +185,18 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 20px;
+    margin: 20px;
+}
+
+#cpu-choice-img {
+    border:6px solid black;
+    border-radius:80px;
+    background-color: black;
+}
+
+#player-choice-img {
+    border:6px solid black;
+    border-radius:80px;
+    background-color: black;
 }
